--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umhc-website-v2",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -17,11 +17,13 @@
     "chart.js": "^4.5.0",
     "dompurify": "^3.2.6",
     "isomorphic-dompurify": "^2.26.0",
+    "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.0.2",
     "swr": "^2.3.4"
   },
   "devDependencies": {
