--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "resend": "^6.0.2",
-    "swr": "^2.3.4"
+    "swr": "^2.3.4",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
