--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.8.3",
+    "@react-email/render": "^1.2.3",
     "@supabase/supabase-js": "^2.50.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
