--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dompurify": "^3.0.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^20.19.17",
+    "@types/phoenix": "^1.6.6",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@types/trusted-types": "^2.0.7",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
