--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.8.3",
     "@react-email/render": "^1.2.3",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/qrcode": "^1.5.5",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
+    "canvas": "^3.2.0",
     "chart.js": "^4.5.0",
     "dompurify": "^3.2.6",
     "isomorphic-dompurify": "^2.26.0",
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.525.0",
     "next": "15.5.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
