--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "isomorphic-dompurify": "^2.26.0",
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.525.0",
+    "mailgun.js": "^12.0.3",
     "next": "15.5.2",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
