--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.525.0",
     "mailgun.js": "^12.0.3",
-    "next": "15.5.9",
+    "next": "^16.1.1",
     "qrcode": "^1.5.4",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "resend": "^6.0.2",
     "swr": "^2.3.4",
     "zod": "^4.1.9"
@@ -49,7 +49,7 @@
     "autoprefixer": "^10.4.20",
     "baseline-browser-mapping": "^2.8.29",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
